--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,6 +4,7 @@
 
 <!-- Support for Academicons -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
 
 
 <!-- favicon from https://commons.wikimedia.org/wiki/File:OOjs_UI_icon_academic-progressive.svg -->
