--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <div class="page__footer-copyright">
-  <p>© 2025 Lingzhi Yu · UT Austin</p>
+  <p>© 2025 Lingzhi Yu · Lingzhi.Yu@mccombs.utexas.edu</p>
   <p>Last updated: {{ site.time | date: '%Y-%m-%d' }}</p>
 </div>
